--- a/eis_mo_po.ipynb
+++ b/eis_mo_po.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f8492f08",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0b54048f",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
          "type": "float"
         }
        ],
-       "ref": "99dddcf4-c340-4550-85d0-1544d5630af4",
+       "ref": "eb06c7c8-89ef-4a8f-baac-af5e06eba076",
        "rows": [
         [
          "0",
@@ -192,7 +192,7 @@
        "Name: freq/Hz, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "5897acff",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "bcfb375e-8e4f-4f0a-8b87-ecf8c0affc3d",
+       "ref": "13cba754-8d40-4445-88d2-351d254aea36",
        "rows": [
         [
          "0",
@@ -369,7 +369,7 @@
        "dtype: complex128"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,29 +380,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "f1b3342b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "CPR not in allowed elements (dict_keys(['s', 'p', 'R', 'C', 'L', 'W', 'Wo', 'Ws', 'CPE', 'La', 'G', 'Gs', 'K', 'Zarc', 'TLMQ', 'T', '__builtins__']))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m circuit = \u001b[33m'\u001b[39m\u001b[33mR0-p(CPR1,R1)\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      4\u001b[39m initial_guess = [\u001b[32m100\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m100\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m circuit_model = \u001b[43mCustomCircuit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcircuit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_guess\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitial_guess\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/models/circuits/circuits.py:436\u001b[39m, in \u001b[36mCustomCircuit.__init__\u001b[39m\u001b[34m(self, circuit, **kwargs)\u001b[39m\n\u001b[32m    433\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(**kwargs)\n\u001b[32m    434\u001b[39m \u001b[38;5;28mself\u001b[39m.circuit = circuit.replace(\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m436\u001b[39m circuit_len = \u001b[43mcalculateCircuitLength\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcircuit\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    438\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.initial_guess) + \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.constants) != circuit_len:\n\u001b[32m    439\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m'\u001b[39m\u001b[33mThe number of initial guesses \u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    440\u001b[39m                      \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.initial_guess)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m) + \u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    441\u001b[39m                      \u001b[33m'\u001b[39m\u001b[33mthe number of constants \u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    442\u001b[39m                      \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.constants)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    443\u001b[39m                      \u001b[33m'\u001b[39m\u001b[33m must be equal to \u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    444\u001b[39m                      \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mthe circuit length (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcircuit_len\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/models/circuits/fitting.py:417\u001b[39m, in \u001b[36mcalculateCircuitLength\u001b[39m\u001b[34m(circuit)\u001b[39m\n\u001b[32m    415\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m elem \u001b[38;5;129;01min\u001b[39;00m extracted_elements:\n\u001b[32m    416\u001b[39m         raw_element = get_element_from_name(elem)\n\u001b[32m--> \u001b[39m\u001b[32m417\u001b[39m         num_params = \u001b[43mcheck_and_eval\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw_element\u001b[49m\u001b[43m)\u001b[49m.num_params\n\u001b[32m    418\u001b[39m         length += num_params\n\u001b[32m    419\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m length\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/models/circuits/fitting.py:442\u001b[39m, in \u001b[36mcheck_and_eval\u001b[39m\u001b[34m(element)\u001b[39m\n\u001b[32m    440\u001b[39m allowed_elements = circuit_elements.keys()\n\u001b[32m    441\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m element \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m allowed_elements:\n\u001b[32m--> \u001b[39m\u001b[32m442\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00melement\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in \u001b[39m\u001b[33m'\u001b[39m +\n\u001b[32m    443\u001b[39m                      \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mallowed elements (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mallowed_elements\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    444\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    445\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28meval\u001b[39m(element, circuit_elements)\n",
-      "\u001b[31mValueError\u001b[39m: CPR not in allowed elements (dict_keys(['s', 'p', 'R', 'C', 'L', 'W', 'Wo', 'Ws', 'CPE', 'La', 'G', 'Gs', 'K', 'Zarc', 'TLMQ', 'T', '__builtins__']))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from impedance.models.circuits import CustomCircuit\n",
     "\n",
-    "circuit = 'R0-p(CPR1,R1)'\n",
+    "circuit = 'R0-p(CPE1,R1)'\n",
     "initial_guess = [100, 1, 1, 100]\n",
     "\n",
     "circuit_model = CustomCircuit(circuit, initial_guess=initial_guess)"
@@ -410,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "b5ed9595",
    "metadata": {},
    "outputs": [
@@ -421,7 +406,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcircuit_model\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcircuit_model\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/models/circuits/circuits.py:295\u001b[39m, in \u001b[36mBaseCircuit.plot\u001b[39m\u001b[34m(self, ax, f_data, Z_data, kind, **kwargs)\u001b[39m\n\u001b[32m    292\u001b[39m             name = \u001b[33m'\u001b[39m\u001b[33mfit\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    293\u001b[39m         plot_dict[name] = {\u001b[33m'\u001b[39m\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m: f_pred, \u001b[33m'\u001b[39m\u001b[33mZ\u001b[39m\u001b[33m'\u001b[39m: Z_fit, \u001b[33m'\u001b[39m\u001b[33mfmt\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m-\u001b[39m\u001b[33m'\u001b[39m}\n\u001b[32m--> \u001b[39m\u001b[32m295\u001b[39m     chart = \u001b[43mplot_altair\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplot_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    296\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m chart\n\u001b[32m    297\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/visualization.py:173\u001b[39m, in \u001b[36mplot_altair\u001b[39m\u001b[34m(data_dict, size, background)\u001b[39m\n\u001b[32m    168\u001b[39m     df = pd.DataFrame({\u001b[33m'\u001b[39m\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m: f, \u001b[33m'\u001b[39m\u001b[33mz_real\u001b[39m\u001b[33m'\u001b[39m: Z.real, \u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m: Z.imag,\n\u001b[32m    169\u001b[39m                        \u001b[33m'\u001b[39m\u001b[33mkind\u001b[39m\u001b[33m'\u001b[39m: kind, \u001b[33m'\u001b[39m\u001b[33mfmt\u001b[39m\u001b[33m'\u001b[39m: fmt})\n\u001b[32m    171\u001b[39m     Z_df = pd.concat([Z_df, df], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m range_x = \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mZ_df\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mz_real\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m - \u001b[38;5;28mmin\u001b[39m(Z_df[\u001b[33m'\u001b[39m\u001b[33mz_real\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m    174\u001b[39m range_y = \u001b[38;5;28mmax\u001b[39m(-Z_df[\u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m]) - \u001b[38;5;28mmin\u001b[39m(-Z_df[\u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m    176\u001b[39m rng = \u001b[38;5;28mmax\u001b[39m(range_x, range_y)\n",
       "\u001b[31mValueError\u001b[39m: max() iterable argument is empty"
@@ -434,17 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "c6445ecf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<impedance.models.circuits.circuits.CustomCircuit at 0x7f1449f202b0>"
+       "<impedance.models.circuits.circuits.CustomCircuit at 0x7f0e87096fd0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "418c7b5e",
    "metadata": {},
    "outputs": [
@@ -465,7 +450,7 @@
        "array([0.19144793, 0.00628962, 0.85332509, 1.92402936])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "69e15a1e",
    "metadata": {},
    "outputs": [],
@@ -486,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "85f0dc58",
    "metadata": {},
    "outputs": [
@@ -509,7 +494,7 @@
        "       2.01287287-0.2620008j ])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "2dd1e37d",
    "metadata": {},
    "outputs": [
