--- a/wizualizacja.ipynb
+++ b/wizualizacja.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f8492f08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CircuitModel2 import draw_circuit"
+    "from CircuitModel import draw_circuit"
    ]
   },
   {
