Implement code changes to enhance functionality and improve performance

--- a/1.ipynb
+++ b/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "f8492f08",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,10 @@
     "from impedance import preprocessing\n",
     "import pandas as pd\n",
     "import os\n",
-    "\n",
-    "\n",
+    "import numpy as np\n",
+    "from CircuitModel import chi2, show_parameters\n",
+    "import pandas as pd\n",
+    "from IPython.display import display, HTML\n",
     "data_path = os.path.join(\"wyniki\", \"1.txt\")\n",
     "\n",
     "data = pd.read_csv(data_path, sep=\"\\t\", header=None)\n",
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "0b54048f",
    "metadata": {},
    "outputs": [
@@ -45,7 +47,7 @@
          "type": "float"
         }
        ],
-       "ref": "4324f6fc-4f24-4fed-8ec7-c09cfe837f66",
+       "ref": "b5d5f78a-3495-49c3-9ce6-1e0b6361344c",
        "rows": [
         [
          "0",
@@ -187,7 +189,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "f1b3342b",
    "metadata": {},
    "outputs": [],
@@ -213,53 +215,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b5ed9595",
+   "execution_count": 19,
+   "id": "c6445ecf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "max() iterable argument is empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcircuit_model\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/models/circuits/circuits.py:295\u001b[39m, in \u001b[36mBaseCircuit.plot\u001b[39m\u001b[34m(self, ax, f_data, Z_data, kind, **kwargs)\u001b[39m\n\u001b[32m    292\u001b[39m             name = \u001b[33m'\u001b[39m\u001b[33mfit\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    293\u001b[39m         plot_dict[name] = {\u001b[33m'\u001b[39m\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m: f_pred, \u001b[33m'\u001b[39m\u001b[33mZ\u001b[39m\u001b[33m'\u001b[39m: Z_fit, \u001b[33m'\u001b[39m\u001b[33mfmt\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m-\u001b[39m\u001b[33m'\u001b[39m}\n\u001b[32m--> \u001b[39m\u001b[32m295\u001b[39m     chart = \u001b[43mplot_altair\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplot_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    296\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m chart\n\u001b[32m    297\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/cholerny-impedant/.venv/lib64/python3.13/site-packages/impedance/visualization.py:173\u001b[39m, in \u001b[36mplot_altair\u001b[39m\u001b[34m(data_dict, size, background)\u001b[39m\n\u001b[32m    168\u001b[39m     df = pd.DataFrame({\u001b[33m'\u001b[39m\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m: f, \u001b[33m'\u001b[39m\u001b[33mz_real\u001b[39m\u001b[33m'\u001b[39m: Z.real, \u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m: Z.imag,\n\u001b[32m    169\u001b[39m                        \u001b[33m'\u001b[39m\u001b[33mkind\u001b[39m\u001b[33m'\u001b[39m: kind, \u001b[33m'\u001b[39m\u001b[33mfmt\u001b[39m\u001b[33m'\u001b[39m: fmt})\n\u001b[32m    171\u001b[39m     Z_df = pd.concat([Z_df, df], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m range_x = \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mZ_df\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mz_real\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m - \u001b[38;5;28mmin\u001b[39m(Z_df[\u001b[33m'\u001b[39m\u001b[33mz_real\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m    174\u001b[39m range_y = \u001b[38;5;28mmax\u001b[39m(-Z_df[\u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m]) - \u001b[38;5;28mmin\u001b[39m(-Z_df[\u001b[33m'\u001b[39m\u001b[33mz_imag\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m    176\u001b[39m rng = \u001b[38;5;28mmax\u001b[39m(range_x, range_y)\n",
-      "\u001b[31mValueError\u001b[39m: max() iterable argument is empty"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "circuit_model.plot()"
+    "fitted_model = circuit_model.fit(frequencies, Z, method='trf')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6445ecf",
+   "id": "56b36738",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "418c7b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circuit Parameters:\n",
+      "====================\n",
+      "R0    | 123.751\n",
+      "C1    | 3.08903e-06\n",
+      "R1    | 10715.8\n",
+      "C2    | 9.53826e-07\n",
+      "R2    | 419.062\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "circuit_model.parameters_\n",
+    "show_parameters(circuit_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4da309d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<impedance.models.circuits.circuits.CustomCircuit at 0x7fdffa74c490>"
+       "(['R0', 'C1', 'R1', 'C2', 'R2'], ['Ohm', 'F', 'Ohm', 'F', 'Ohm'])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circuit_model.fit(frequencies, Z)"
+    "circuit_model.get_param_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "418c7b5e",
+   "execution_count": 23,
+   "id": "e492e839",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +291,7 @@
        "       4.19062437e+02])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "69e15a1e",
    "metadata": {},
    "outputs": [],
@@ -290,7 +312,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "id": "84a49531",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "complex128",
+         "type": "unknown"
+        }
+       ],
+       "ref": "8d1907b4-68af-4e6a-b951-47ba66f3cd46",
+       "rows": [
+        [
+         "0",
+         "(124.56231-45.46629j)"
+        ],
+        [
+         "1",
+         "(128.95544-72.14854j)"
+        ],
+        [
+         "2",
+         "(130.50612-104.44491j)"
+        ],
+        [
+         "3",
+         "(155.01424-151.33224j)"
+        ],
+        [
+         "4",
+         "(185.35851-205.93224j)"
+        ],
+        [
+         "5",
+         "(232.11295-258.1351j)"
+        ],
+        [
+         "6",
+         "(310.30026-314.52304j)"
+        ],
+        [
+         "7",
+         "(387.84357-358.52518j)"
+        ],
+        [
+         "8",
+         "(452.32159-409.84595j)"
+        ],
+        [
+         "9",
+         "(499.78836-483.63559j)"
+        ],
+        [
+         "10",
+         "(539.25354-624.20563j)"
+        ],
+        [
+         "11",
+         "(582.05347-849.83502j)"
+        ],
+        [
+         "12",
+         "(644.48431-1182.1274j)"
+        ],
+        [
+         "13",
+         "(791.45233-1694.9391j)"
+        ],
+        [
+         "14",
+         "(1094.6826-2405.4399j)"
+        ],
+        [
+         "15",
+         "(1673.1499-3319.1816j)"
+        ],
+        [
+         "16",
+         "(2771.4441-4307.2632j)"
+        ],
+        [
+         "17",
+         "(4364.8237-5111.0474j)"
+        ],
+        [
+         "18",
+         "(6353.7686-5281.3062j)"
+        ],
+        [
+         "19",
+         "(8206.5205-4824.189j)"
+        ],
+        [
+         "20",
+         "(9570.8789-3895.2012j)"
+        ],
+        [
+         "21",
+         "(10400.958-2913.3826j)"
+        ],
+        [
+         "22",
+         "(10856.956-2077.4846j)"
+        ],
+        [
+         "23",
+         "(11065.465-1438.4141j)"
+        ],
+        [
+         "24",
+         "(11197.273-1015.2707j)"
+        ],
+        [
+         "25",
+         "(11226.754-687.89911j)"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 26
+       }
+      },
+      "text/plain": [
+       "0       124.56231-   45.46629j\n",
+       "1       128.95544-   72.14854j\n",
+       "2       130.50612-  104.44491j\n",
+       "3       155.01424-  151.33224j\n",
+       "4       185.35851-  205.93224j\n",
+       "5       232.11295-  258.13510j\n",
+       "6       310.30026-  314.52304j\n",
+       "7       387.84357-  358.52518j\n",
+       "8       452.32159-  409.84595j\n",
+       "9       499.78836-  483.63559j\n",
+       "10      539.25354-  624.20563j\n",
+       "11      582.05347-  849.83502j\n",
+       "12      644.48431- 1182.12740j\n",
+       "13      791.45233- 1694.93910j\n",
+       "14     1094.68260- 2405.43990j\n",
+       "15     1673.14990- 3319.18160j\n",
+       "16     2771.44410- 4307.26320j\n",
+       "17     4364.82370- 5111.04740j\n",
+       "18     6353.76860- 5281.30620j\n",
+       "19     8206.52050- 4824.18900j\n",
+       "20     9570.87890- 3895.20120j\n",
+       "21    10400.95800- 2913.38260j\n",
+       "22    10856.95600- 2077.48460j\n",
+       "23    11065.46500- 1438.41410j\n",
+       "24    11197.27300- 1015.27070j\n",
+       "25    11226.75400-  687.89911j\n",
+       "dtype: complex128"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "85f0dc58",
    "metadata": {},
    "outputs": [
@@ -312,7 +506,7 @@
        "       11169.33698573 -974.67010334j, 11217.10966204 -666.20425833j])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +517,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "1744ba18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-squared value: 22410.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate chi-squared for our current fit\n",
+    "chi2_value = chi2(Z, Z_fit)\n",
+    "print(f\"Chi-squared value: {chi2_value:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "2dd1e37d",
    "metadata": {},
    "outputs": [
